# BardPrime

./: .env.example  .gitignore  README.md  bardprime.py  launch.bat  requirements.txt
app/: index.html  package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  python_bridge.rs  secrets.rs
app/src/api/: client.ts
app/src/components/: ChatPanel.tsx  ComposePanel.tsx  JournalPanel.tsx  LibraryPanel.tsx  MoodSelector.tsx  SettingsModal.tsx  Sidebar.tsx  SongPlayer.tsx  Visualizer.tsx
app/src/store/: index.ts
app/src/types/: index.ts
core/: __init__.py  chat_engine.py  config.py  emotion_mapper.py  genre_styles.py  llm_client.py  lyrics_engine.py  music_engine.py  singing_engine.py  song_library.py  soul_composer.py  story_weaver.py
docs/: release_checklist.md
scripts/: smoke_test.py
